--- a/source/app/perfil/perfil.html
+++ b/source/app/perfil/perfil.html
@@ -1,20 +1,22 @@
 <section class="SectionPerfil">
   <article class="FormPerfil" style="display:block;">
 
-      <h1 class="textPer"> Bienvenido   </h1>
+      <h1 class="textPer"> Bienvenido </h1>
 
-       <figure class="FormPerfil-img"  >
-         <div>
-    <button class="boton"><label style="color:white;" for="foto-input">Subir Foto</label></button>
-  <input type="file" id="foto-input" on-read-img="vm.loadFoto($fileContent)">
-  </div>
-<img ng-if="vm.usuario.foto" ng-src="{{'data:image/png;base64,' + vm.usuario.foto}}" width="150px" height="150px"/>
-       </figure>
 
 
   <form class="usuarioPerfil">
+    <figure class="FormPerfil-img">
+     <div class="photo">
+<button class="boton"><label style="color:white;" for="foto-input">Subir Foto</label></button>
+<input type="file" id="foto-input" on-read-img="vm.loadFoto($fileContent)">
+</div>
+<img ng-if="vm.usuario.avatar" ng-src="{{'data:image/png;base64,' + vm.usuario.avatar}}" width="150px" height="150px"/>
+   </figure>
+
 
     <div class="infoPersonal">
+
 
     <md-input-container class="name">
     <label  style="color:black;">Nombre</label>
@@ -50,10 +52,85 @@
     </md-input-container> <br>
   </div>
 
-
   </form>
   </article>
 </section>
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------
+<!--
+<section class="SectionPerfilC" style="text-align:centrer;">
+  <article class="FormPerfil" style="display:block;">
+
+    <h1 class="ConfiC" >Configuración</h1>
+
+     <figure class="FormPerfil-imgC"  >
+       <img class="messegerC" src="../../img/messenger.jpg" style="width:100%"/>
+     </figure>
+
+  <form class="usuarioPerfilC" name="formConfig">
+    <div class="infoPersonalC">
+
+    <label class="InfoC" >Información personal</label><br>
+
+    <md-input-container class="md-block">
+    <label>Nombre</label>
+      <input required md-no-asterisk name="nombres" ng-model="vm.usuario.nombres" style="color:black;">
+
+    </md-input-container>
+    <md-input-container class="md-block form-group has-success" >
+    <label>Apellidos</label>
+    <input required md-no-asterisk name="apellidos"  ng-model="vm.usuario.apellidos" style="color:black;">
+    </md-input-container>
+    </div>
+
+      <div>
+    <label class="Contac">Información de contacto</label><br>
+
+  <md-input-container class="md-block">
+        <label>Sexo</label>
+        <input required md-no-asterisk name="sexo" ng-model="vm.usuario.sexo" style="color:black;">
+  </md-input-container>
+
+  <md-input-container class="md-block">
+    <label>Fecha Nacimiento</label>
+    <input required md-no-asterisk name="direccion" ng-model="vm.usuario.fechaNac" style="color:black;">
+  </md-input-container>
+
+  <md-input-container class="md-block">
+    <label>Teléfono</label>
+    <input required md-no-asterisk name="telefono" ng-model="vm.usuario.telefono" style="color:black;">
+  </md-input-container>
+
+  <md-input-container class="md-block">
+    <label>Ubicación</label>
+    <input required md-no-asterisk name="direccion" ng-model="vm.usuario.direccion" style="color:black;">
+  </md-input-container>
+  <md-input-container class="md-block">
+    <label>Email</label>
+    <input type="email" ng-pattern="/^.+@.+\..+$/" required md-no-asterisk name="email" ng-model="vm.usuario.email" style="color:black;">
+  </md-input-container>
+  <!-- <section>
+    <h1 style="color:#2271b3;">Inhabilitar cuenta</h1>
+    <p>Tenga presente que si usted deshabilita su cuenta, esta quedara inactiva hasta que vuelva a iniciar sesión con ella</p>
+    <!-- <md-button class="md-raised md-primary" style="padding:0 10em;">Inhabilitar</md-button> -->
+    <!-- <md-checkbox  style="color:#0000;font-weight:bold;" class="md-primary" name="TerminosCondiciones" id="chekched" ng-model="vm.usuario.estado" >Inhabilitar Mi Cuenta</md-checkbox>
+  </section> -->
+    <!-- </div>
+    <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+
+  <md-button ng-click="vm.update()" ng-disabled="formConfig.$invalid" class="buttomC"
+  class="md-raised" style="background:#4FC3F7; color:white;">Guardar</md-button>
+
+    <md-button ng-disabled="formConfig.$invalid" href="/" class="buttom1C" style="background:#01579B;color:white;">Cancelar</md-button>
+
+    </section><br>
+  </form>
+  </article>
+</section> -->
+
+
+
+
+
 
 <!-- <section class="Profile-container">
   <form class="ProfileForm">
